Add support for uint8 distance comparison (#15148)
Add distance functions that treat `byte[]` as unsigned and use them in `ScalarQuantizer` code paths. `ScalarQuantizer`
assumes that all math will be unsigned but this can't be true when all 8 bits of a `byte` are used. In all cases where this
is used values are widened to `short` or `int` before any operations occur so we can perform unsigned widening instead.

Fixes are required in a few other places to support unsigned extension, in particular this is required when recalculating
the vector offset as part of merging.

This will be useful for supporting 8 bit OSQ in #15064